tools/data-handler/test/test-data/valid/minimal/.cards/local/linkTypes/.schema
{
  "id": "link-type-schema",
  "version": 1
}
