tools/data-handler/test/test-data/invalid/invalid-card-has-wrong-state/.cards/local/.schema
{
    "id": "cardsconfig-schema",
    "name": "decision",
    "version": 1
}